# renesascup_smartmedicine

./: .secure_azone  .secure_xml  CMakeLists.txt  Config.cmake  README.md  bsp_linker_info.h  buildinfo.json  compile_commands.json  configuration.xml  fsp_gen.ld  memory_regions.ld  ra_cfg.txt
.cache/clangd/index/: FreeRTOS.h.4DA21E1DCA8C8124.idx  FreeRTOS.h.9FB2EA9BCE9B61C3.idx  FreeRTOSConfig.h.476407FB97861F91.idx  FreeRTOSConfig.h.D4AC21E47045DA6D.idx  GUI_Thread.c.7D80294786C2671E.idx  GUI_Thread.h.01B37C7829AE7086.idx  GUI_Thread_entry.c.547B68DFD095EF02.idx  LED_thread.c.0372F329305963D2.idx  LED_thread.c.B7A1E6FB9A5577D7.idx  LED_thread.h.61FD294752700EA4.idx  LED_thread.h.ED8F0412A78F1AB9.idx  LED_thread_entry.c.205AB0ED69B92EF3.idx  LED_thread_entry.c.9691EB853C425A64.idx  Motor_thread.c.C2CC33DB6CC17507.idx  Motor_thread.h.9DA4E2B8979131D9.idx  Motor_thread_entry.c.1A5D23C2F9ED02F8.idx  Motor_thread_entry.c.82E7BD6B2686F7A9.idx  R7FA6M5BH.h.0E88F4AF836BD16F.idx  R7FA6M5BH.h.1ED6014EB41B7EF1.idx  ZDT_app.c.1E24A076766BCACC.idx  ZDT_app.h.903C9004D35224C6.idx  ZDT_drv.c.90239B95243C7EDF.idx  ZDT_drv.h.95673270A907D9E8.idx  __stdarg___gnuc_va_list.h.43322AE3D43F2A6D.idx  __stdarg___va_copy.h.6E02C5CAED5ADFF0.idx  __stdarg_header_macro.h.836ACD50C0797812.idx  __stdarg_va_arg.h.812C1930F29459BA.idx  __stdarg_va_copy.h.2E1CFDC71328F9F6.idx  __stdarg_va_list.h.C93868FED8BA725F.idx  __stddef_header_macro.h.74193D00D19D99A8.idx  __stddef_null.h.D0F85C0F140452AF.idx  __stddef_offsetof.h.344BAF9432A6779F.idx  __stddef_ptrdiff_t.h.9F7297CFFEF7F01A.idx  _ansi.h.981C5B74718C18E4.idx  (+981 more)
.theia/: launch.json
cmake/: GeneratedCfg.cmake  GeneratedSrc.cmake
ra_cfg/aws/: FreeRTOSConfig.h
ra_cfg/fsp_cfg/: r_canfd_cfg.h
ra_gen/: GUI_Thread.c  GUI_Thread.h  Motor_thread.c  Motor_thread.h  bsp_clock_cfg.h  main.c  pin_data.c  vector_data.c  vector_data.h
src/: GUI_Thread_entry.c  Motor_thread_entry.c
src/Middlewares/: lv_conf.h
src/app/: ZDT_app.c  ZDT_app.h  app.h  app_i2c_touchpad_test.c  app_i2c_touchpad_test.h  app_lvgl_test.c  app_spi_display_test.c  app_spi_display_test.h  lvgl_app.c  uart_app.c  uart_app.h
src/drive/: ZDT_drv.c  ZDT_drv.h  led_drv.c  led_drv.h  uart_drv.c  uart_drv.h
(+17 files in other folders)
